--- a/fpga-si4463/Total_link/total_link_summary.html
+++ b/fpga-si4463/Total_link/total_link_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/06/2016 - 16:01:16)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/14/2016 - 10:47:28)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Total_link.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>890 Warnings (863 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>491 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>682</TD>
+<TD ALIGN=RIGHT>992</TD>
 <TD ALIGN=RIGHT>11,440</TD>
-<TD ALIGN=RIGHT>5%</TD>
+<TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>682</TD>
+<TD ALIGN=RIGHT>992</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,31 +90,31 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>1,045</TD>
+<TD ALIGN=RIGHT>1,408</TD>
 <TD ALIGN=RIGHT>5,720</TD>
-<TD ALIGN=RIGHT>18%</TD>
+<TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>1,038</TD>
+<TD ALIGN=RIGHT>1,373</TD>
 <TD ALIGN=RIGHT>5,720</TD>
-<TD ALIGN=RIGHT>18%</TD>
+<TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>880</TD>
+<TD ALIGN=RIGHT>1,059</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>113</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>157</TD>
+<TD ALIGN=RIGHT>201</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,25 +126,61 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Memory</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>12</TD>
 <TD ALIGN=RIGHT>1,440</TD>
-<TD ALIGN=RIGHT>0%</TD>
+<TD ALIGN=RIGHT>1%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Dual Port RAM</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Single Port RAM</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift Register</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
+<TD ALIGN=RIGHT>0</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
+<TD ALIGN=RIGHT>12</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>23</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>18</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>5</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,62 +192,62 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>409</TD>
+<TD ALIGN=RIGHT>522</TD>
 <TD ALIGN=RIGHT>1,430</TD>
-<TD ALIGN=RIGHT>28%</TD>
+<TD ALIGN=RIGHT>36%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
-<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>196</TD>
 <TD ALIGN=RIGHT>2,860</TD>
-<TD ALIGN=RIGHT>1%</TD>
+<TD ALIGN=RIGHT>6%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>1,137</TD>
+<TD ALIGN=RIGHT>1,543</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>537</TD>
-<TD ALIGN=RIGHT>1,137</TD>
-<TD ALIGN=RIGHT>47%</TD>
+<TD ALIGN=RIGHT>677</TD>
+<TD ALIGN=RIGHT>1,543</TD>
+<TD ALIGN=RIGHT>43%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>92</TD>
-<TD ALIGN=RIGHT>1,137</TD>
+<TD ALIGN=RIGHT>135</TD>
+<TD ALIGN=RIGHT>1,543</TD>
 <TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>508</TD>
-<TD ALIGN=RIGHT>1,137</TD>
-<TD ALIGN=RIGHT>44%</TD>
+<TD ALIGN=RIGHT>731</TD>
+<TD ALIGN=RIGHT>1,543</TD>
+<TD ALIGN=RIGHT>47%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>35</TD>
+<TD ALIGN=RIGHT>57</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>46</TD>
+<TD ALIGN=RIGHT>112</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>54</TD>
+<TD ALIGN=RIGHT>62</TD>
 <TD ALIGN=RIGHT>102</TD>
-<TD ALIGN=RIGHT>52%</TD>
+<TD ALIGN=RIGHT>60%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>54</TD>
-<TD ALIGN=RIGHT>54</TD>
+<TD ALIGN=RIGHT>62</TD>
+<TD ALIGN=RIGHT>62</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -306,9 +342,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of DSP48A1s</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
 <TD ALIGN=RIGHT>16</TD>
-<TD ALIGN=RIGHT>0%</TD>
+<TD ALIGN=RIGHT>6%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of ICAPs</TD>
@@ -354,7 +390,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>4.20</TD>
+<TD ALIGN=RIGHT>4.03</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -391,21 +427,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周四 四月 7 10:45:42 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>890 Warnings (863 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>29 Infos (29 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周四 四月 7 10:45:50 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周四 四月 7 10:46:33 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周四 四月 7 10:46:49 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周四 四月 14 10:45:41 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>491 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>38 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周四 四月 14 10:45:49 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周四 四月 14 10:46:34 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周四 四月 14 10:46:55 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周四 四月 7 10:46:57 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周四 四月 7 10:47:12 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周四 四月 14 10:47:03 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周四 四月 14 10:47:18 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.grf'>Guide Results Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>周四 四月 7 09:59:12 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 7 10:47:12 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 7 10:47:20 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 14 10:47:20 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 14 10:47:28 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/07/201
+<br><center><b>Date Generated:</b> 04/14/201
