--- a/fpga-si4463/test1/test1_summary.html
+++ b/fpga-si4463/test1/test1_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>test1 Project Status (04/07/2016 - 11:02:51)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>test1 Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>test1.xise</TD>
@@ -273,4 +273,4 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/07/2016 - 
+<br><center><b>Date Generated:</b> 04/12/2016 - 
