--- a/fpga-si4463/Total_link/total_link_summary.html
+++ b/fpga-si4463/Total_link/total_link_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/15/2016 - 10:27:45)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/20/2016 - 15:34:30)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Total_link.xise</TD>
@@ -19,12 +19,13 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx9-3tqg144</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>478 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -59,19 +60,19 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>919</TD>
+<TD ALIGN=RIGHT>934</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>919</TD>
+<TD ALIGN=RIGHT>933</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -89,31 +90,31 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>1,379</TD>
+<TD ALIGN=RIGHT>1,417</TD>
 <TD ALIGN=RIGHT>5,720</TD>
 <TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>1,354</TD>
+<TD ALIGN=RIGHT>1,385</TD>
 <TD ALIGN=RIGHT>5,720</TD>
-<TD ALIGN=RIGHT>23%</TD>
+<TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>1,041</TD>
+<TD ALIGN=RIGHT>1,101</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 output only</TD>
-<TD ALIGN=RIGHT>113</TD>
+<TD ALIGN=RIGHT>94</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>200</TD>
+<TD ALIGN=RIGHT>190</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -125,7 +126,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Memory</TD>
-<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>12</TD>
 <TD ALIGN=RIGHT>1,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -143,13 +144,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift Register</TD>
-<TD ALIGN=RIGHT>13</TD>
+<TD ALIGN=RIGHT>12</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -161,25 +162,25 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>12</TD>
+<TD ALIGN=RIGHT>20</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>7</TD>
+<TD ALIGN=RIGHT>16</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice carry load</TD>
-<TD ALIGN=RIGHT>5</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -191,9 +192,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>492</TD>
+<TD ALIGN=RIGHT>546</TD>
 <TD ALIGN=RIGHT>1,430</TD>
-<TD ALIGN=RIGHT>34%</TD>
+<TD ALIGN=RIGHT>38%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
@@ -203,37 +204,37 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>1,489</TD>
+<TD ALIGN=RIGHT>1,537</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>669</TD>
-<TD ALIGN=RIGHT>1,489</TD>
-<TD ALIGN=RIGHT>44%</TD>
+<TD ALIGN=RIGHT>713</TD>
+<TD ALIGN=RIGHT>1,537</TD>
+<TD ALIGN=RIGHT>46%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>110</TD>
-<TD ALIGN=RIGHT>1,489</TD>
+<TD ALIGN=RIGHT>120</TD>
+<TD ALIGN=RIGHT>1,537</TD>
 <TD ALIGN=RIGHT>7%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>710</TD>
-<TD ALIGN=RIGHT>1,489</TD>
-<TD ALIGN=RIGHT>47%</TD>
+<TD ALIGN=RIGHT>704</TD>
+<TD ALIGN=RIGHT>1,537</TD>
+<TD ALIGN=RIGHT>45%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>48</TD>
+<TD ALIGN=RIGHT>59</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>106</TD>
+<TD ALIGN=RIGHT>128</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -389,7 +390,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.98</TD>
+<TD ALIGN=RIGHT>4.13</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -426,21 +427,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周五 四月 15 10:25:47 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>482 Warnings (462 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>36 Infos (36 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周五 四月 15 10:26:01 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周五 四月 15 10:26:54 2016</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周五 四月 15 10:27:12 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周三 四月 20 15:32:39 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>476 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>38 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周三 四月 20 15:32:47 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周三 四月 20 15:33:40 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周三 四月 20 15:34:00 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周五 四月 15 10:27:21 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周五 四月 15 10:27:36 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周三 四月 20 15:34:08 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周三 四月 20 15:34:24 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.grf'>Guide Results Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>周四 四月 7 09:59:12 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周五 四月 15 10:27:37 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周五 四月 15 10:27:45 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周三 四月 20 15:34:24 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周三 四月 20 15:34:30 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/15/201
+<br><center><b>Date Generated:</b> 04/20/2016 - 
